* Dec 19 2000 hship

Update documentation to reflect use of Jetty 3.0.0 distribution.

* Nov 20 2000

Copy j2ee.jar in for compiling, but don't distribute it.

* Nov 20 2000

Update Readme to mention J2EE RI.

* Nov 20 2000

Update Readme to reflect Jetty 3.0 rc6.

* Nov 17 2000 hship

Redistribute JARs from other projects, and include licenses.

* Nov 6 2000 hship

Begin organizing things to support the distributed release.